Criação do comportamento de esqueci minha senha.

--- a/src/modules/emails/template/forgotPassword.html
+++ b/src/modules/emails/template/forgotPassword.html
@@ -49,7 +49,7 @@
                         Recebemos uma requisição constando que você esqueceu sua senha, caso queira reiniciar ela basta clicar no botão abaixo, assim irá abrir uma tela para que você consiga informar uma nova senha.
                         Caso não tenha sido você que requisitou a alteração de senha, favor ignorar este e-mail.
                       </p>
-                      <a href="http://localhost:3000/user/resetPassword/#TOKEN_RESET_PASSWORD#"
+                      <a href="http://localhost:3000/reset-password/#TOKEN_RESET_PASSWORD#"
                         style="background:#113b61;text-decoration:none !important; font-weight:500; margin-top:35px; color:#fff;text-transform:uppercase; font-size:14px;padding:10px 24px;display:inline-block;border-radius:50px;">Alterar Senha</a>
                     </td>
                   </tr>
